ng2-iamge viwer upgrade to angualr 10

--- a/projects/image-viewer/package.json
+++ b/projects/image-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-image-viewer",
-  "version": "1.1.1",
+  "version": "4.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/brenoprata10/ng2-image-viewer"
@@ -21,14 +21,19 @@
   "bugs": {
     "url": "https://github.com/brenoprata10/ng2-image-viewer/issues"
   },
-  "main": "ng2-image-viewer.umd.js",
-  "module": "ng2-image-viewer.js",
-  "jsnext:main": "ng2-image-viewer.js",
-  "typings": "ng2-image-viewer.d.ts",
+  "homepage": "https://github.com/brenoprata10/ng2-image-viewer#readme",
+  "exports": {
+    "./src/lib/imageviewer": {
+      "style": "./src/lib/imageviewer.scss"
+    },
+    "./src/lib/image-viewer.component": {
+      "style": "./src/lib/image-viewer.component.scss"
+    }
+  },
   "peerDependencies": {
-    "@angular/core": "^7.0.0",
-    "iv-viewer": "~2.0.0",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "lodash": ">=4",
+    "@angular/common": ">=10",
+    "@angular/core": ">=10",
+	  "iv-viewer": "~2.0.0"
   }
 }
