--- a/package.json
+++ b/package.json
@@ -1,88 +1,85 @@
 {
-  "name": "ng2-image-viewer",
-  "version": "2.0.0",
-  "scripts": {
-    "build": "gulp build",
-    "build:watch": "gulp",
-    "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ng2-image-viewer -d docs --hideGenerator",
-    "docs:serve": "npm run docs:build -- -s",
-    "docs:watch": "npm run docs:build -- -s -w",
-    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
-    "lite": "lite-server",
-    "playground:build": "tsc -p playground -w",
-    "playground": "concurrently \"npm run build:watch\" \"npm run playground:build\" \"npm run lite\"",
-    "test": "tsc && karma start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brenoprata10/ng2-image-viewer"
-  },
-  "author": {
-    "name": "brenoprata10",
-    "email": "brenoprata10@gmail.com"
-  },
-  "keywords": [
-    "angular",
-    "image",
-    "viewer",
-    "angular 4",
-    "angular 5",
-    "angular 6",
-    "pdf",
-    "pdf viewer",
-    "url image viewer",
-    "zoom"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/brenoprata10/ng2-image-viewer/issues"
-  },
-  "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@compodoc/compodoc": "^1.0.0-beta.10",
-    "@types/jasmine": "2.5.53",
-    "@types/node": "~6.0.60",
-    "angular-in-memory-web-api": "^0.3.2",
-    "codelyzer": "~3.2.0",
-    "concurrently": "^3.4.0",
-    "core-js": "^2.4.1",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-rollup": "^2.15.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "lite-server": "^2.3.0",
-    "node-sass": "^4.12.0",
-    "node-sass-tilde-importer": "^1.0.0",
-    "node-watch": "^0.5.2",
-    "protractor": "~5.1.2",
-    "rollup": "^0.49.3",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.5.2",
-    "systemjs": "^0.20.12",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.14"
-  },
-  "engines": {
-    "node": ">=6.0.0"
-  },
-  "dependencies": {
-    "iv-viewer": "^2.0.0",
-    "natives": "^1.1.6"
-  }
+    "name": "ng2-image-viewer",
+    "version": "4.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "build": "ng build --prod && yarn copy:scss",
+        "npm_pack": "cd dist/ng2-image-viewer && npm pack",
+        "package": "npm run build_lib && npm run npm_pack",
+        "copy:scss": "mkdir dist\\ng2-image-viewer\\scss && cp projects/image-viewer/src/lib/*.scss dist/ng2-image-viewer/scss"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/brenoprata10/ng2-image-viewer"
+    },
+    "author": {
+        "name": "brenoprata10",
+        "email": "brenoprata10@gmail.com"
+    },
+    "keywords": [
+        "angular",
+        "image",
+        "viewer",
+        "angular 4",
+        "angular 5",
+        "angular 6",
+        "angular 10",
+        "pdf",
+        "pdf viewer",
+        "url image viewer",
+        "zoom"
+    ],
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/brenoprata10/ng2-image-viewer/issues"
+    },
+    "dependencies": {
+        "@angular/animations": "~10.2.4",
+        "@angular/common": "~10.2.4",
+        "@angular/compiler": "~10.2.4",
+        "@angular/core": "~10.2.4",
+        "@angular/forms": "~10.2.4",
+        "@angular/platform-browser": "~10.2.4",
+        "@angular/platform-browser-dynamic": "~10.2.4",
+        "@angular/router": "~10.2.4",
+        "rxjs": "~6.5.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.3",
+        "core-js": "^3.6.4",
+        "lodash": "^4.17.15",
+        "snyk": "^1.293.0",
+        "iv-viewer": "~2.0.0",
+        "natives": "^1.1.6"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1002.2",
+        "@angular-devkit/build-ng-packagr": "~0.1002.0",
+        "@angular/cli": "~10.2.2",
+        "@angular/compiler-cli": "~10.2.4",
+        "@angular/language-service": "~10.2.4",
+        "@types/jasmine": "~3.5.4",
+        "@types/jasminewd2": "~2.0.8",
+        "codelyzer": "^5.2.1",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.4.1",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.1",
+        "karma-jasmine": "~3.1.1",
+        "karma-jasmine-html-reporter": "^1.5.2",
+        "protractor": "~5.4.3",
+        "ts-node": "~8.6.1",
+        "tslint": "~5.20.1",
+        "typescript": "~4.0.5",
+        "@types/node": "^13.7.1",
+        "ng-packagr": "^9.0.0",
+        "node-sass": "^5.0.0"
+    },
+    "engines": {
+        "node": ">=12.0.0"
+    }
 }
